tests/models/struct/unnamed/u16/pass/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    u16
);
fn main() {}
